--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,13 +23,13 @@
          android:onClick="showToast"/>
 
     <Button
-        android:id="@+id/button_count"
+        android:id="@+id/roll_dice"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
         android:background="#0000FF"
-        android:onClick="countUp"
-        android:text="@string/Count"
+        android:onClick="rollingDice"
+        android:text="@string/Roll"
         android:textColor="#FFFFFF"
         android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -48,7 +48,7 @@
         android:textSize="160sp"
         android:textColor="#000000"
         android:foregroundGravity="center"
-        app:layout_constraintBottom_toTopOf="@+id/button_count"
+        app:layout_constraintBottom_toTopOf="@+id/roll_dice"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_toast"
