--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,26 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.android.MainActivity">
+    android:orientation="vertical"
+    tools:context=".MainActivity">
 
     <Button
         android:id="@+id/button_toast"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintHorizontal_weight="10"
+
         android:background="#0000FF"
         android:text="@string/Toast"
         android:textColor="#FFFFFF"
         android:textSize="22sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="4dp"
-        tools:ignore="MissingConstraints"
          android:onClick="showToast"/>
+
+
+    <TextView
+        android:id="@+id/show_count"
+        android:layout_width="434dp"
+        android:layout_height="620dp"
+        android:background="#FFFF00"
+        android:foregroundGravity="center"
+        android:gravity="center_horizontal"
+        android:text="0"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="160sp"
+        android:textStyle="bold"
+         />
 
     <Button
         android:id="@+id/roll_dice"
@@ -31,27 +42,6 @@
         android:onClick="rollingDice"
         android:text="@string/Roll"
         android:textColor="#FFFFFF"
-        android:textSize="22sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:textSize="22sp" />
 
-    <TextView
-        android:id="@+id/show_count"
-        android:layout_width="414dp"
-        android:layout_height="620dp"
-        android:background="#FFFF00"
-        android:text="0"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        android:textSize="160sp"
-        android:textColor="#000000"
-        android:foregroundGravity="center"
-        app:layout_constraintBottom_toTopOf="@+id/roll_dice"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_toast"
-        android:gravity="center_horizontal" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
